[package]
name = "orlok"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid"] }
sea-query = { version = "0", features = ["with-chrono", "with-rust_decimal", "with-uuid"] }
sea-query-binder = { version = "0", features = ["sqlx-postgres", "with-chrono", "with-rust_decimal", "with-uuid"] }
async-trait = "0.1.68"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.70"
chrono = { version = "0.4.24", features = ["serde"] }
rust_decimal = "1.29.1"
uuid = { version = "1.3.1", features = ["v4", "serde"] }

[dev-dependencies]
rust_decimal_macros = "1.29.1"
tokio-test = "0.4.2"
