[package]
name = "orlok"
description = "A database toolkit with generic implementations of the Repository pattern."
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["Anton Evdokimov"]
repository = "https://github.com/meowmeowcode/orlok"
keywords = ["databases", "postgresql", "repository"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }

sqlx.version = "0.6"
sqlx.features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "chrono",
    "uuid",
    "decimal"
]

async-trait = "0.1.68"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.70"
chrono = { version = "0.4.24", features = ["serde"] }
rust_decimal = "1.29.1"
uuid = { version = "1.3.1", features = ["v4", "serde"] }

[dev-dependencies]
rust_decimal_macros = "1.29.1"
tokio-test = "0.4.2"
